--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Trix
+@import "~trix/dist/trix.css";
+
+// Add Recipe
+@import "add-recipe";
