--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11274,3 +11274,36 @@ a.text-dark:focus {
   cursor: pointer;
 }
 
+.discover-recipe-container {
+  cursor: pointer;
+  transition: all 1s;
+}
+
+.discover-recipe-container:hover {
+  background-color: lightblue !important;
+}
+
+.add-ingredient {
+  cursor: pointer;
+}
+
+.fa-times {
+  cursor: pointer;
+}
+
+.ingredient-quantity {
+  width: 60px;
+}
+
+.fa-arrow-alt-circle-left {
+  cursor: pointer;
+}
+
+.fa-edit {
+  cursor: pointer;
+}
+
+.fa-save {
+  cursor: pointer;
+}
+
